// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package dbsqlc

import (
	"github.com/jackc/pgx/v5/pgtype"
)

type Admin struct {
	ID        int64            `db:"id" json:"id"`
	CreatedAt pgtype.Timestamp `db:"created_at" json:"created_at"`
}

type Category struct {
	ID          int32            `db:"id" json:"id"`
	Name        string           `db:"name" json:"name"`
	Description pgtype.Text      `db:"description" json:"description"`
	IsActive    pgtype.Bool      `db:"is_active" json:"is_active"`
	CreatedAt   pgtype.Timestamp `db:"created_at" json:"created_at"`
}

type Event struct {
	ID                int32            `db:"id" json:"id"`
	Title             string           `db:"title" json:"title"`
	Description       pgtype.Text      `db:"description" json:"description"`
	Chat              pgtype.Int8      `db:"chat" json:"chat"`
	Date              pgtype.Timestamp `db:"date" json:"date"`
	DurationHours     pgtype.Int4      `db:"duration_hours" json:"duration_hours"`
	Location          string           `db:"location" json:"location"`
	LocationLat       pgtype.Numeric   `db:"location_lat" json:"location_lat"`
	LocationLon       pgtype.Numeric   `db:"location_lon" json:"location_lon"`
	CategoryID        pgtype.Int4      `db:"category_id" json:"category_id"`
	OrganizerID       pgtype.Int8      `db:"organizer_id" json:"organizer_id"`
	Contacts          pgtype.Text      `db:"contacts" json:"contacts"`
	MaxVolunteers     int32            `db:"max_volunteers" json:"max_volunteers"`
	CurrentVolunteers pgtype.Int4      `db:"current_volunteers" json:"current_volunteers"`
	Status            pgtype.Text      `db:"status" json:"status"`
	CancelledReason   pgtype.Text      `db:"cancelled_reason" json:"cancelled_reason"`
	CompletedAt       pgtype.Timestamp `db:"completed_at" json:"completed_at"`
	CreatedAt         pgtype.Timestamp `db:"created_at" json:"created_at"`
	UpdatedAt         pgtype.Timestamp `db:"updated_at" json:"updated_at"`
}

type EventMedium struct {
	ID         int32            `db:"id" json:"id"`
	EventID    pgtype.Int4      `db:"event_id" json:"event_id"`
	Token      string           `db:"token" json:"token"`
	UploadedAt pgtype.Timestamp `db:"uploaded_at" json:"uploaded_at"`
	UploadedBy pgtype.Int8      `db:"uploaded_by" json:"uploaded_by"`
}

type EventParticipant struct {
	ID            int32            `db:"id" json:"id"`
	EventID       pgtype.Int4      `db:"event_id" json:"event_id"`
	VolunteerID   pgtype.Int8      `db:"volunteer_id" json:"volunteer_id"`
	ApplicationID pgtype.Int4      `db:"application_id" json:"application_id"`
	JoinedChatAt  pgtype.Timestamp `db:"joined_chat_at" json:"joined_chat_at"`
}

type Organizer struct {
	ID               int64            `db:"id" json:"id"`
	OrganizationName string           `db:"organization_name" json:"organization_name"`
	About            pgtype.Text      `db:"about" json:"about"`
	VerifiedAt       pgtype.Timestamp `db:"verified_at" json:"verified_at"`
	VerifiedBy       pgtype.Int8      `db:"verified_by" json:"verified_by"`
	CreatedAt        pgtype.Timestamp `db:"created_at" json:"created_at"`
	UpdatedAt        pgtype.Timestamp `db:"updated_at" json:"updated_at"`
}

type OrganizerVerificationRequest struct {
	ID               int32            `db:"id" json:"id"`
	OrganizerID      int64            `db:"organizer_id" json:"organizer_id"`
	Status           string           `db:"status" json:"status"`
	OrganizerComment pgtype.Text      `db:"organizer_comment" json:"organizer_comment"`
	AdminComment     pgtype.Text      `db:"admin_comment" json:"admin_comment"`
	ReviewedBy       pgtype.Int8      `db:"reviewed_by" json:"reviewed_by"`
	SubmittedAt      pgtype.Timestamp `db:"submitted_at" json:"submitted_at"`
	ReviewedAt       pgtype.Timestamp `db:"reviewed_at" json:"reviewed_at"`
}

type User struct {
	ID          int64            `db:"id" json:"id"`
	Username    pgtype.Text      `db:"username" json:"username"`
	Name        string           `db:"name" json:"name"`
	Role        string           `db:"role" json:"role"`
	State       string           `db:"state" json:"state"`
	IsBlocked   pgtype.Bool      `db:"is_blocked" json:"is_blocked"`
	CreatedAt   pgtype.Timestamp `db:"created_at" json:"created_at"`
	UpdatedAt   pgtype.Timestamp `db:"updated_at" json:"updated_at"`
	LocationLat pgtype.Numeric   `db:"location_lat" json:"location_lat"`
	LocationLon pgtype.Numeric   `db:"location_lon" json:"location_lon"`
}

type Volunteer struct {
	ID           int64       `db:"id" json:"id"`
	About        pgtype.Text `db:"about" json:"about"`
	SearchRadius pgtype.Int4 `db:"search_radius" json:"search_radius"`
	CategoryIds  []int32     `db:"category_ids" json:"category_ids"`
}

type VolunteerApplication struct {
	ID              int32            `db:"id" json:"id"`
	EventID         pgtype.Int4      `db:"event_id" json:"event_id"`
	VolunteerID     pgtype.Int8      `db:"volunteer_id" json:"volunteer_id"`
	Status          pgtype.Text      `db:"status" json:"status"`
	RejectionReason pgtype.Text      `db:"rejection_reason" json:"rejection_reason"`
	ReviewedBy      pgtype.Int8      `db:"reviewed_by" json:"reviewed_by"`
	AppliedAt       pgtype.Timestamp `db:"applied_at" json:"applied_at"`
	ReviewedAt      pgtype.Timestamp `db:"reviewed_at" json:"reviewed_at"`
}
